--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-center text-lg-start text-white mt-4 fixed-bottom">
+<footer class="bg-dark text-center text-lg-start text-white mt-4">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
       © 2022 Copyright:
       <a class="text-white" href="#">Reem</a>
