--- a/src/app/todo/add/add.component.html
+++ b/src/app/todo/add/add.component.html
@@ -4,7 +4,10 @@
     <div class="input-group-append">
       <button class="btn btn-info" type="submit" (click)="add(todo.value)">Add</button>
     </div>
-</div>
+  </div>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Search" (keyup)="search($event)" >
+  </div>
 <div class="d-flex">
   <div class="ml-auto p-2 text-muted">Number of todo items: {{todoLength}}</div>
 </div>
